Fix ipad homepage layout issues

--- a/assets/css/_media-block.styl
+++ b/assets/css/_media-block.styl
@@ -67,6 +67,7 @@
     text-align center
     +tablet-up()
       max-width 400px
+      min-width: calc(100% - 200px)
       margin 0
       text-align left
       .title
